--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="menu_exportar_modificacoes">Exportar modificações</string>
     <string name="alt_logo_enel">Logo Enel</string>
     <string name="item_sem_registros">Sem registros..</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
