--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="menu_limpar_aplicativo">Limpar aplicativo</string>
     <string name="menu_exportar_modificacoes">Exportar modificações</string>
     <string name="alt_logo_enel">Logo Enel</string>
-    <string name="item_sem_registros">Sem registros..</string>
+    <string name="item_sem_registros">Sem registros</string>
     <string name="title_activity_maps">Map</string>
 </resources>
