--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="menu_limpar_aplicativo">Deletar todos os registros</string>
     <string name="menu_exportar_modificacoes">Exportar registros</string>
     <string name="item_sem_registros">Sem registros</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
